Don't propagate root/body background to viewport for display:none.

According to the specification, we should not paint backgrounds for
html or body on the viewport if they are display:none [1].

[1] https://drafts.csswg.org/css-backgrounds/#special-backgrounds

Bug: 895757
Change-Id: Ia975022e3bfa849298667f72908a64c0d5331872
Reviewed-on: https://chromium-review.googlesource.com/c/1283134
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599990}
Former-commit-id: fc9423c44b942212578f34811aea56a6644efb2a