third_party/blink/renderer/core/dom/document.h
@@ -1007,14 +1007,8 @@ class CORE_EXPORT Document : public ContainerNode,
 
   HTMLHeadElement* head() const;
 
-  // Decide which element is to define the viewport's overflow policy. If
-  // |rootStyle| is set, use that as the style for the root element, rather than
-  // obtaining it on our own. The reason for this is that style may not have
-  // been associated with the elements yet - in which case it may have been
-  // calculated on the fly (without associating it with the actual element)
-  // somewhere.
-  Element* ViewportDefiningElement(
-      const ComputedStyle* root_style = nullptr) const;
+  // Decide which element is to define the viewport's overflow policy.
+  Element* ViewportDefiningElement() const;
 
   DocumentMarkerController& Markers() const { return *markers_; }
 
